Finished up with one question for MAtt or Edan

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,7 +11,11 @@
       <h1>Week 3 assignment</h1>
       <h2>Check the console...</h2>
     </header>
-    <!-- create an ordered list with any questions you have on this week's material -->
-
+    <!-- create an ordered list with any questions you have on this wee material -->
+    <ul>
+      <li> Had a question on # 9 of part 3 of this weeks assignemnt. I couldn't get the supplyChanges to work on this
+        it was giving me the number 0. A couple of us went over it and then tried to rename the supplyChanges
+        and this worked just fine. But we couldn't find the problem with supplyChanges. Any thoughts?</li>
+    </ul>
   </body>
 </html>
